feat(auth,municipality): TS-301 provision municipality admin with force-password-change flow
- Auto-provision MUNICIPALITY_ADM on municipality registration with
  cryptographically generated temporary password and must_change_password=true
- Restricted JWT scope (ROLE_FORCE_PASSWORD_CHANGE) blocks all endpoints
  except /api/auth/force-password-change until admin changes password
- POST /api/auth/force-password-change issues full token pair (access +
  refresh) after successful password change
- MunicipalityAdminCreatedEvent dispatched post-registration; email listener
  sends temporary password to admin via Thymeleaf template
- TenantContext moved to shared.domain to resolve Spring Modulith cycle
  between municipality and tenant modules
- AuthCookieManager.buildTokenCookieHeaders() encapsulates refresh cookie
  conditional logic (SRP fix in AuthController)
- V8 migration adds must_change_password column to users table
- README and Postman collection updated with force-password-change endpoint
  and first-access flow documentation