@@ -3,7 +3,7 @@ package br.com.toponesystem.thirdsector.shared.adapter.in.web;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 public class TenantAuthenticationToken extends AbstractAuthenticationToken {
@@ -14,12 +14,25 @@ public class TenantAuthenticationToken extends AbstractAuthenticationToken {
     private final UUID organizationId;
 
     public TenantAuthenticationToken(UUID userId, String role, String tenantId, UUID organizationId) {
-        super(Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role)));
+        super(List.of(new SimpleGrantedAuthority("ROLE_" + role)));
         this.userId = userId;
         this.role = role;
         this.tenantId = tenantId;
         this.organizationId = organizationId;
         setAuthenticated(true);
+    }
+
+    private TenantAuthenticationToken(UUID userId, String role, String tenantId) {
+        super(List.of(new SimpleGrantedAuthority("ROLE_FORCE_PASSWORD_CHANGE")));
+        this.userId = userId;
+        this.role = role;
+        this.tenantId = tenantId;
+        this.organizationId = null;
+        setAuthenticated(true);
+    }
+
+    public static TenantAuthenticationToken forPasswordChange(UUID userId, String role, String tenantId) {
+        return new TenantAuthenticationToken(userId, role, tenantId);
     }
 
     @Override
@@ -29,6 +42,10 @@ public class TenantAuthenticationToken extends AbstractAuthenticationToken {
 
     @Override
     public Object getPrincipal() {
+        return userId;
+    }
+
+    public UUID getUserId() {
         return userId;
     }
 
